--- a/src/5RC_Stint_Time_Util/5RC_Stint_Time_Util.vcxproj.filters
+++ b/src/5RC_Stint_Time_Util/5RC_Stint_Time_Util.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="irsdk_defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
