StintVars class to manage the stint var header information

--- a/src/5RC_Stint_Time_Util/5RC_Stint_Time_Util.vcxproj
+++ b/src/5RC_Stint_Time_Util/5RC_Stint_Time_Util.vcxproj
@@ -132,8 +132,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="5RC_Stint_Time_Util.cpp" />
+    <ClCompile Include="StintVars.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="StintVars.h" />
     <ClInclude Include="irsdk_defines.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
