Refactored into ibtHandler, DiskServer, RegisteredVars objects etc

--- a/src/5RC_Stint_Time_Util/Makefile
+++ b/src/5RC_Stint_Time_Util/Makefile
@@ -4,10 +4,10 @@ all: 5RC_Stint_Time_Util clean_o
 
 cc:=g++
 execpath:=./elf/
-sourcefiles:=5RC_Stint_Time_Util.o StintVars.o
+sourcefiles:=5RC_Stint_Time_Util.o DiskServer.o RegisteredVars.o IbtHandler.o
 
 %.o: %.cpp
-	$(cc) -c $?
+	$(cc) -g -c $?
 
 $(execpath): 
 	mkdir $(execpath)
@@ -16,5 +16,5 @@ clean_o:
 	rm $(wildcard *.o)
 
 5RC_Stint_Time_Util: $(sourcefiles) | $(execpath)
-	$(cc) $? -o $(execpath)/$@
+	$(cc) -g $? -o $(execpath)/$@ 
 	
