--- a/src/5RC_Stint_Time_Util/Makefile
+++ b/src/5RC_Stint_Time_Util/Makefile
@@ -7,7 +7,7 @@ execpath:=./elf/
 sourcefiles:=5RC_Stint_Time_Util.o DiskServer.o RegisteredVars.o IbtHandler.o
 
 %.o: %.cpp
-	$(cc) -g -c $?
+	$(cc) -g -c -std=c++17 $?
 
 $(execpath): 
 	mkdir $(execpath)
@@ -16,5 +16,5 @@ clean_o:
 	rm $(wildcard *.o)
 
 5RC_Stint_Time_Util: $(sourcefiles) | $(execpath)
-	$(cc) -g $? -o $(execpath)/$@ 
+	$(cc) -g -std=c++17 -o $(execpath)/$@ $? 
 	
